--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Soccer league simulation",
   "main": "index.js",
   "dependencies": {
+    "express": "^4.16.4",
+    "sequelize": "^5.1.1",
+    "sqlite3": "^4.0.6",
     "winston": "^3.2.1"
   },
   "devDependencies": {},
