--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
+    "bootstrap": "^4.3.1",
+    "cors": "^2.8.5",
     "express": "^4.16.3",
+    "morgan": "^1.9.1",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-router-dom": "^5.0.0",
     "sequelize": "^5.1.1",
     "sqlite3": "^4.0.6",
-    "winston": "^3.2.1",
-    "babel-polyfill": "^6.26.0",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
