--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
     "express": "^4.16.3",
+    "i": "^0.3.6",
     "morgan": "^1.9.1",
+    "npm": "^6.9.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^5.0.0",
