--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "morgan": "^1.9.1",
     "npm": "^6.9.0",
     "react": "^16.5.2",
+    "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.5.2",
     "react-router-dom": "^5.0.0",
     "sequelize": "^5.1.1",
